<resources>
    <string name="app_name">Covid Info</string>
    <string name="text_accounts">Recent Updates</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Welcome to Covid Info,Stay Safe Always</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_Home">Home</string>
    <string name="title_Registered">Users</string>
    <string name="title_vaccination">vaccination</string>
    <string name="title_Help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who">WHO has worked with UNICEF, Gavi and partners to develop resources, such as guidance, trainings, tools and advocacy materials to help governments,
        health workers and partners to launch, refine, and optimise uptake of their COVID-19 vaccination programmes.</string>
    <string name="covax">COVAX aims to accelerate the development and manufacturing of COVID-19 vaccines, and guarantee fair and equitable access for every country. COVAX is co-led by the Coalition for Epidemic Preparedness Innovations (CEPI),
        Gavi and WHO, with UNICEF as a key delivery partner and PAHO as the procurement agent in the Americas.</string>
    <string name="learners">The draft landscape of COVID-19 vaccine candidates contains information on vaccine candidates collected through public information (e.g. clinical trial registries) and information that were directly provided by vaccine developers to WHO.  The landscape is generally updated twice a week,
        based on the latest information, including those we receive from scientists and research</string>
</resources>
