<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:background="@drawable/backg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_hello" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <TextView
            android:layout_marginStart="2dp"
            android:text="Total cases"
            android:textSize = "20dp"
            android:layout_width = "wrap_content"
            android:textColor = "#ff4500"
            android:layout_height = "wrap_content"
            android:singleLine = "true" />
        <TextView

            android:textSize = "20dp"
            android:textAlignment = "center"
            android:layout_width = "wrap_content"
            android:textColor = "#ff4500"
            android:layout_height = "wrap_content"
            android:singleLine = "true"
            android:text="recovered"
            android:layout_marginLeft="60dp"/>
        <TextView
            android:id = "@+id/text"
            android:textSize = "20dp"
            android:layout_marginLeft="60dp"
            android:textAlignment = "center"
            android:layout_width = "wrap_content"
            android:textColor = "#ff4500"
            android:layout_height = "wrap_content"
            android:singleLine = "true"
            android:text="Deaths"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtcases"
                android:layout_marginStart="2dp"
                android:textSize = "20dp"
                android:layout_width = "wrap_content"
                android:textColor = "#F4F1EF"
                android:layout_height = "wrap_content"
                android:singleLine = "true" />
            <TextView
                android:id="@+id/txtrecover"
                android:textSize = "20dp"
                android:textAlignment = "center"
                android:layout_width = "wrap_content"
                android:textColor = "#F4F1EF"
                android:layout_height = "wrap_content"
                android:singleLine = "true"
                android:layout_marginLeft="60dp"
                />
            <TextView
                android:id = "@+id/textdeath"
                android:textSize = "20dp"
                android:layout_marginLeft="60dp"
                android:textAlignment = "center"
                android:layout_width = "wrap_content"
                android:textColor = "#F4F1EF"
                android:layout_height = "wrap_content"
                android:singleLine = "true"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:text="@string/text_accounts"
        android:textColor="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

